Update FarmHelperConfig.java